# CAMELS-CH

./: .gitignore  hello.py  pyproject.toml  runpod_setup.sh
checkpoints/: best-checkpoint-v1.ckpt  best-checkpoint-v2.ckpt  best-checkpoint-v4.ckpt  best-checkpoint.ckpt
checkpoints/bundle/: bundle-checkpoint-v1.ckpt  bundle-checkpoint.ckpt
checkpoints/finetune/: ca-finetune-checkpoint-v1.ckpt  ca-finetune-checkpoint.ckpt
checkpoints/pretrain/: ch-pretrain-checkpoint-v1.ckpt  ch-pretrain-checkpoint.ckpt
clustering/: time_series_clusterer.py
experiments/ADAFineTune/: benchmarkADAFineTune.py  challengerADAFineTune.py  configADAFineTune.py
experiments/ADA_direct/: benchmarkADADirect.py  challengerADADirect.py  configADADirect.py
experiments/AdversarialDomainAdaptation/: benchmarkADA.py  challengerADA.py  configADA.py
experiments/Exp1/: benchmark.py  challenger.py  config.py
experiments/Exp2/: challenger2.py  config2.py
experiments/Exp3/: benchmark3.py  challenger3.py  config3.py
experiments/Exp4/: benchmark4.py  challenger4.py  config4.py
experiments/Exp5/: benchmark5.py  challenger5.py  (+1 more)
models/: lstm.py
notebooks/: ADA_evaluation.ipynb  CA_data_raw_eda.ipynb  clean_caravan.ipynb  era5_eda.ipynb  exp1_evaluation.ipynb  exp4_evaluation.ipynb  hyperparameter_tune.ipynb  layer_freezing.ipynb  phase1_model.ckpt  simple_lstm.ipynb  static_attributes_CA.ipynb  testing_multiple_domain_loader.ipynb  testing_transfer_datamodule.ipynb  tft_benchmark.ipynb  tft_test.ipynb  ts_clustering.ipynb  turbidity.ipynb
utils/: bbox_to_ee_geometry.py  era5_downloader.py  loss_functions.py  metrics.py
(+838 files in other folders)
