[project]
name = "camels-ch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "pytorch-forecasting>=1.2.0",
    "seaborn>=0.13.2",
    "sktime>=0.35.0",
]
