[project]
name = "camels-ch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy<=3.0.0",
  "torch >=2.0.0,!=2.0.1,<3.0.0",
  "lightning >=2.0.0,<3.0.0",
  "scipy >=1.8,<2.0",
  "pandas >=1.3.0,<3.0.0",
  "scikit-learn >=1.2,<2.0",
  "ipykernel>=6.29.5",
  "pytorch-forecasting>=1.2.0",
  "matplotlib>=3.10.0",
  "seaborn>=0.13.2",
]
