[project]
name = "camels-ch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy<=3.0.0",
  "torch >=2.0.0,!=2.0.1,<3.0.0",
  "lightning >=2.0.0,<3.0.0",
  "scipy >=1.8,<2.0",
  "pandas>=1.3.0,<3.0.0",
  "scikit-learn >=1.2,<2.0",
  "ipykernel>=6.29.5",
  "pytorch-forecasting>=1.2.0",
  "matplotlib>=3.10.0",
  "seaborn>=0.13.2",
  "pip-tools>=7.4.1",
  "cdsapi>=0.7.4",
  "geopandas>=1.0.1",
  "earthengine-api>=1.5.1",
  "geemap>=0.35.1",
  "folium>=0.19.4",
  "pytest>=8.3.4",
  "tensorboard>=2.19.0",
  "optuna>=4.2.1",
  "plotly>=6.0.0",
  "contextily>=1.6.2",
  "matplotlib-scalebar>=0.9.0",
  "ruff>=0.9.7",
]
